--- a/maket/src/scss/app.scss
+++ b/maket/src/scss/app.scss
@@ -410,6 +410,7 @@ body{
         position: absolute;
         left: 0;
         top: 50%;
+        z-index: -1;
         transform: translateY(-50%);
         transition: all .25s ease;
     }
@@ -483,7 +484,7 @@ body{
     background-color: #fff;
     &:hover{
         cursor: pointer;
-        opacity: 0.8;
+        //opacity: 0.8;
     }
     &.btn-small{
         padding: 30px;
@@ -533,6 +534,7 @@ body{
     font-size: 16px;
     color: $text;
     line-height: 1;
+    font-family: $IBM;
     &:hover{
         text-decoration: none;
     }
@@ -670,13 +672,28 @@ body{
         .bubble{
             opacity: 1;
             &-1{
-                transform: translate(-50%,50%) scale(1);
+                transform: translateY(68%) translateX(-60%) scale(1);
+                left: auto;
+                right: 0;
+                filter: blur(50px);
+                width: 400px;
+                height: 300px;
             }
             &-2{
-                transform: translate(50%,-50%) scale(1);
+                transform: translate(0%,-10%) scale(1);
+                width: 50%;
+                height: 50%;
+                filter: blur(200px);
             }
             &-3{
-                transform: translate(-50%,-50%) scale(1);
+                transform: translate(-50%, 50%) scale(1);
+                right: auto;
+                left: 0;
+                top: auto;
+                bottom: 0;
+                width: 1000px;
+                height: 600px;
+                filter: blur(200px);
             }
         }
     }
@@ -684,13 +701,15 @@ body{
 
 .section__who-we{
     .bubble{
-        width: 400px;
-        height: 300px;
+        // width: 400px;
+        // height: 300px;
         filter: blur(100px);
         transition: all .25s ease;
         position: absolute;
         z-index: -1;
         opacity: 0;
+        border-radius: 50%;
+        transform-origin: 50%, 50%;
         &-1{
             background-color: rgba(255, 49, 49, 0.8);
             left: 0;
@@ -766,7 +785,10 @@ body{
     transition: all .25s ease; 
     &:hover{
         cursor: pointer;
-        transform: scale(1.1);
+        span{
+            height: 60px;
+        }
+        //transform: scale(1.1);
     }
     span{
         height: 40px;
@@ -774,6 +796,7 @@ body{
         background-color: #fff;
         position: relative;
         display: block;
+        transition: all .25s ease;
         &::before{
             content: "";
             width: 10px;
@@ -1110,7 +1133,7 @@ body{
         padding-top: 70px;
     }
     .title__section{
-        margin-bottom: 0;
+        margin-bottom: 40px;
         font-size: 48px;
         @media (max-width: 1200px) {
             margin-bottom: 40px;
@@ -1191,6 +1214,7 @@ body{
         }
     }
 }
+
 
 .blog{
     &-grid{
@@ -1297,6 +1321,19 @@ body{
             margin-top: 0;
             margin-bottom: 30px;
         }
+        ul{
+            li{
+                font-size: 20px;
+                line-height: 30px;
+            }
+        }
+        a{
+            color: $text;
+            text-decoration: underline;
+            &:hover{
+                text-decoration: none;
+            }  
+        }
     }
 }
 
@@ -1372,14 +1409,23 @@ aside{
         margin-bottom: 70px;
         margin-top: 0;
         font-weight: normal;
+        padding-right: 40px;
+        transition: all .25s ease;
+        &:hover{
+            padding-right: 0;
+            span{
+                max-width: 85px;
+            }
+        }
         span{
-            max-width: 95px;
+            max-width: 70px;
             width: 100%;
             margin-left: 15px;
             height: 2px;
             background-color: $dark;
             position: relative;
             margin-right: 15px;
+            transition: all .25s ease;
             margin-bottom: -5px;
             &::before{
                 content: '';
@@ -1402,7 +1448,12 @@ aside{
 
 .caption-image{
     text-align: center;
-    margin-bottom: 30px;
+    margin-bottom: 80px;
+    padding-top: 50px;
+    @media (max-width: 700px) {
+        margin-bottom: 30px;
+        padding-top: 0;
+    }
     img{
         max-width: 100%;
         display: block;
@@ -1535,6 +1586,7 @@ aside{
         font-size: 12px;
         line-height: 16px;
         padding-top: 20px;
+        font-family: $IBM;  
     }
 }
 
@@ -1552,4 +1604,13 @@ aside{
         filter: grayscale(1);
     }
     
+}
+
+.section-cases__item{
+    .header-block{
+        margin-bottom: 130px;
+        @media (max-width: 700px) {
+            margin-bottom: 70px;
+        }
+    }
 }
