--- a/client/assets/scss/app.scss
+++ b/client/assets/scss/app.scss
@@ -249,3 +249,241 @@
         }
     }
 }
+
+.overflow-hidden{
+    overflow: hidden;
+    .section__footer .wrap-btn{
+        bottom: 120px;
+    }
+}
+.section__footer .wrap-btn{
+    bottom: 150px;
+    margin-left: 7px;
+}
+.mad-7{
+    text-align: center;
+}
+.filter-cases--control ul li a.purple:before,
+.what-doing__list-item:nth-child(4) a:before,
+.show-case__col .preview_case.purple:hover:before{
+    background-color: #b163ff;
+}
+
+
+.filter-cases--control ul li {
+    margin-bottom: 30px;
+    a{
+        display: inline-block;
+    }
+}
+
+.staffs-list{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-left: -15px;
+    margin-right: -15px;
+    &__grid{
+        padding-left: 15px;
+        padding-right: 15px;
+        max-width: 323px;
+        width: 100%;
+        margin-bottom: 80px;
+        @media (max-width: 992px) {
+            margin-bottom: 40px;
+        }
+    }
+    &__item{
+        display: block;
+        text-decoration: none;
+        color: #202022;
+        text-decoration: none;
+
+        &:hover{
+            .staff-image{
+                transform: scale(1.1);
+            }
+        }
+        .name {
+            font-size: 26px;
+            line-height: 34px;
+            display: block;
+            text-align: center;
+            margin-bottom: 10px;
+        }
+        .post{
+            font-size: 18px;
+            line-height: 23px;
+            text-align: center;
+            font-family: IBM Plex Sans,sans-serif;
+            display: block;
+        }
+    }
+}
+
+.staff-image{
+    width: 100%;
+    display: block;
+    border-radius: 50%;
+    overflow: hidden;
+    background-size: cover;
+    background-position: center;
+    margin-bottom: 30px;
+    transition: all .25s ease;
+    &::before{
+        content: '';
+        width: 100%;
+        padding-top: 100%;
+        display: block;
+    }
+}
+
+.section-about{
+    padding-bottom: 100px;
+}
+
+.staff-item--block{
+    display: flex;
+    @media (max-width: 767px) {
+        flex-direction: column;
+    }
+    .content-image{
+        max-width: 242px;
+        width: 100%;
+        @media (max-width: 767px) {
+            margin-left: auto;
+            margin-right: auto;
+        }
+    }
+    .content{
+        max-width: 800px;
+        width: 100%;
+        margin-left: 70px;
+        padding-top: 35px;
+        @media (max-width: 767px) {
+            margin-left: 0;
+            padding-top: 0;
+        }
+        .name{
+            font-size: 48px;
+            line-height: 60px;
+            color: #202022;
+            margin-bottom: 15px;
+            @media (max-width: 767px) {
+                text-align: center;
+                font-size: 30px;
+                line-height: 40px;
+                margin-bottom: 5px;
+            }
+        }
+        .post{
+            font-size: 26px;
+            line-height: 36px;
+            color: #202022;
+            font-family: IBM Plex Sans,sans-serif;
+            margin-bottom: 30px;
+            @media (max-width: 767px) {
+                text-align: center;
+                font-size: 20px;
+                line-height: 30px;
+                margin-bottom: 15px;
+            }
+        }
+        .link-file{
+            @media (max-width: 767px) {
+                text-align: center;
+            }
+            a{
+                text-decoration: underline;
+                color: #202022;
+                font-size: 22px;
+                line-height: 34px;
+                position: relative;
+                display: inline-block;
+                &::before{
+                    content: '';
+                    width: 165px;
+                    height: 40px;
+                    position: absolute;
+                    left: 50%;
+                    top: 50%;
+                    transform: translate(-50%,-50%);
+                    background: radial-gradient(81.44% 81.44% at 50% 50%, #4D9CD5 0%, rgba(255, 255, 255, 0) 94.26%);
+                    filter: blur(30px);
+                    transition: all .25s ease;
+                    opacity: 0;
+                }
+                &:hover{
+                    text-decoration: none;
+                    &::before {
+                        opacity: 1;
+                    }
+                }
+            }
+        }
+        .text{
+            font-family: IBM Plex Sans,sans-serif;
+            color: #202022;
+            margin-top: 70px;
+            @media (max-width: 767px) {
+                margin-top: 30px;
+            }
+            ul{
+                margin-bottom: 100px;
+                margin-top: 0;
+                padding-left: 0;
+                list-style-type: none;
+                @media (max-width: 767px) {
+                    margin-bottom: 50px;
+                }
+                li{
+                    font-size: 20px;
+                    line-height: 30px;
+                    position: relative;
+                    padding-left: 15px;
+                    @media (max-width: 767px) {
+                        font-size: 18px;
+                        line-height: 1.3;
+                    }
+                    &::before{
+                        content: '';
+                        width: 5px;
+                        height: 5px;
+                        background-color: #202022;
+                        position: absolute;
+                        left: 0;
+                        top: 14px;
+                        border-radius: 50%;
+                    }
+                }
+            }
+            h3{
+                margin-top: 0;
+                font-weight: normal;
+                font-size: 26px;
+                line-height: 34px;
+                margin-bottom: 10px;
+                font-family:"PT Serif",sans-serif;
+            }
+        }
+    }
+}
+.staff-item--block{
+    padding-top: 130px;
+    @media (max-width: 992px) {
+        padding-top: 50px;
+    }
+}
+.section--staff-item{
+    padding-bottom: 130px;
+    @media (max-width: 992px) {
+        padding-bottom: 50px;
+    }
+}
+
+.what-doing__list-item a{
+    @media (max-width: 930px) {
+        padding: 15px 0;
+        line-height: 1 !important;
+    }
+}
