--- a/client/assets/scss/app.scss
+++ b/client/assets/scss/app.scss
@@ -483,7 +483,193 @@
 
 .what-doing__list-item a{
     @media (max-width: 930px) {
-        padding: 15px 0;
-        line-height: 1 !important;
+        //padding: 15px 0;
+        //line-height: 1 !important;
+    }
+}
+
+.section__main{
+    @media (min-width: 992px) and (max-width: 1440px) and (max-height: 1000px) {
+        .show-case__col{
+            &:hover{
+                .preview_case{
+                    &-content {
+                        .description {
+                        }
+                    }
+                }
+            }
+            &.last .show-case--arrow {
+                margin-top: 41px;
+            }
+        }
+        .preview_case{
+            margin-bottom: 0;
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-end;
+            transition: all .25s ease;
+            &-title{
+                padding-top: 10px;
+                .type{
+                    font-size: 16px;
+                    line-height: 20px;
+                }
+                .name{
+                    font-size: 23px;
+                }
+            }
+            &-content {
+                .description {
+                    padding: 10px 0;
+                }
+            }
+        }
+    }
+    @media (max-width: 767px) {
+        position: relative;
+        justify-content: center;
+        padding-top: 93px;
+        .top-line{
+            position: absolute;
+            left: 0;
+            top: 0;
+            width: 100%;
+        }
+        .content__main{
+            margin-bottom: 60px;
+        }
+    }
+    @media (min-width: 767px) {
+        .show-case--sm{
+            display: none !important;
+        }
+
+    }
+    .show-case__col{
+        &.last{
+            @media (max-width: 767px) {
+                margin-bottom: 30px;
+                .show-case--arrow {
+                    span{
+                        margin-bottom: 20px;
+                    }
+                }
+            }
+        }
+    }
+}
+
+.block-sm{
+    display: none;
+    @media (min-width: 767px) {
+        display: block !important;
+    }
+}
+.hidden-sm{
+    display: block;
+    @media (max-width: 767px) {
+        display: none !important;
+    }
+}
+
+.nav-top {
+    ul {
+        &:not(.sub-menu) {
+            li{
+                a{
+                    text-decoration: none;
+                    position: relative;
+                    &::before{
+                        content: '';
+                        width: 100%;
+                        height: 2px;
+                        position: absolute;
+                        left: 0;
+                        bottom: -2px;
+                        background-color: #202022;
+                        opacity: 0;
+                        transition: all .25s ease;
+                    }
+                    &:hover{
+                        &::before{
+                            opacity: 1;
+                        }
+                    }
+                }
+            }
+        }
+        li {
+            .sub-menu {
+                li{
+                    a{
+                        span{
+                            position: relative;
+                            &::before{
+                                content: '';
+                                width: 100%;
+                                height: 2px;
+                                background-color: #ffffff;
+                                position: absolute;
+                                left: 0;
+                                bottom: -5px;
+                                opacity: 0;
+                                transition: all .25s ease;
+                            }
+                        }
+                        text-decoration: none;
+                        &:hover,
+                        &:active{
+                            span{
+                                &::before{
+                                    opacity: 1;
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+.section{
+    position: relative;
+    &::before{
+        content: '';
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0,0,0,.3);
+        opacity: 0;
+        transition: all .5s ease-in-out;
+        z-index: 100;
+    }
+    &.active {
+        box-shadow: none;
+        &::before{
+            z-index: -100;
+        }
+    }
+    &.transition-out{
+        &::before{
+            animation: out 1.5s ease both;
+        }
+    }
+}
+
+@keyframes out {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+.filter-cases--control ul li{
+    @media (max-width: 767px) {
+        margin-bottom: 50px;
     }
 }
